# Glucose

./: .cproject  .gitignore  .project  CMakeLists.txt  README.md
include/exception/: NoSuchElementException.hpp
include/glucose/: BitSequence.hpp  GlucoseException.hpp  NoSuchElementException.hpp  Optional.hpp  Stream.hpp  StreamException.hpp  TestCase.hpp  TestException.hpp  TestFacade.hpp  TestResult.hpp  TestRunner.hpp  Vec.hpp
include/math/: VectorND.hpp
include/structs/: Optional.hpp
src/: GlucoseTest.cpp
src/exception/: GlucoseException.cpp  GlucoseException.h  GlucoseException.hpp  NoSuchElementException.cpp  NoSuchElementException.h  NoSuchElementException.hpp
src/main/: BitSequence.cpp  CMakeLists.txt  TestResult.cpp  TestRunner.cpp
src/math/: Vec.hpp  VectorND.cpp  VectorND.h  VectorND.hpp
src/misc/: BitSequence.hpp
src/structs/: Optional.h  Optional.hpp
src/test/: BitSequenceTest.hpp  CMakeLists.txt  OptionalTest.hpp  StreamTest.hpp  VecTest.hpp  tests.cpp
test/: GlucoseTest.cpp
